<resources>
    <string name="app_name">Listen Together</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="action_login">Login</string>
    <string name="text_login_with">Or Login With</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_google">Google</string>
    <string name="action_spotify">Spotify</string>
    <string name="action_sign_up">Sign up</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="hint_email">e-mail</string>
    <string name="label_create_room">Create and manage your Room</string>
    <string name="title_all_rooms">All Rooms</string>
    <string name="option_profile">Profile</string>
    <string name="option_my_rooms">My Rooms</string>
    <string name="option_all_rooms">All Rooms</string>
    <string name="option_settings">Settings</string>
    <string name="option_logout">Logout</string>
    <string name="hint_search_room">Search for rooms</string>
    <string name="msg_no_internet">Internet not available !</string>
    <string name="msg_refresh">TAP SCREEN TO REFRESH</string>
    <string name="msg_wrong_credentials">Invalid username or password.</string>
    <string name="title_create_room">Create room</string>
    <string name="hint_room_name">Name</string>
    <string name="hint_room_password">Password</string>
    <string name="btn_youtube">YouTube</string>
    <string name="btn_spotify">Spotify</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="hint_room_icon">Thumbnail</string>
    <string name="msg_complete_fields">Please complete all of the fields.</string>
    <string name="hint_message">Write your message...</string>

    <string name="item_info">Info</string>
    <string name="item_search">Search</string>
    <string name="item_chat">Chat</string>
    <string name="item_leave">Leave</string>
    <string name="hint_search_track">Search for track...</string>
    <string name="msg_not_turn">Please wait your turn to search.</string>
    <string name="msg_player_failed">Failed to initialize YouTube player</string>
    <string name="label_member_count">Total members</string>
    <string name="label_song_count">Played songs</string>
    <string name="label_creation_date">Creation date</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_about">About</string>
    <string name="title_version">App version</string>
    <string name="app_version">V1.0</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_new_members">New members</string>
    <string name="label_new_member">When users are joining the room you\'re currently in</string>
    <string name="title_messaging">Messaging</string>
    <string name="label_messaging">When someone sends a message to the room you\'re currently in</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_settings">Settings</string>
    <string name="btn_daily">Daily</string>
    <string name="btn_weekly">Weekly</string>
    <string name="btn_never">Never</string>
    <string name="title_reminder_period">Set reminder period</string>
    <string name="action_ok">Ok</string>
    <string name="title_new_member">New member</string>
    <string name="body_new_member">%1$s joined %2$s room</string>
    <string name="title_new_message">New message</string>
    <string name="msg_message">%1$s sent a message to %2$s room</string>
    <string name="title_reminder_notification">Enjoy some music</string>
    <string name="msg_reminder_notification">Tell your friends to connect</string>
    <string name="msg_left">You\'ve left the room</string>
    <string name="title_profile">Profile</string>
    <string name="label_phone">Phone</string>
    <string name="label_city">City</string>
    <string name="label_country">Country</string>
    <string name="label_rooms">Rooms joined</string>
</resources>
