<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:background="@drawable/rounded_rec_btn_blue"
    android:background="@color/brightRedText"
    android:layout_gravity="center_vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/image_thumbnail"
        android:scaleType="fitXY"
        tools:src="@drawable/chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/blueIndicator" />
    <LinearLayout
        android:id="@+id/container_info"
        android:layout_centerVertical="true"
        android:paddingTop="36dp"
        android:paddingBottom="36dp"
        android:layout_gravity="center_vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:lineSpacingExtra="-3sp"
            tools:text="HEAVY METAL ROOM"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <GridLayout
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:columnCount="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/members"
                android:layout_width="24dp"
                android:layout_height="24dp" />
            <TextView
                android:layout_marginStart="24dp"
                android:text="@string/label_member_count"
                android:textColor="@color/whiteTextInfo"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_member_count"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                tools:text="12"
                android:textColor="@color/whiteTextInfo"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_marginTop="16dp"
                android:src="@drawable/tracks"
                android:layout_width="24dp"
                android:layout_height="24dp" />
            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:text="@string/label_song_count"
                android:textColor="@color/whiteTextInfo"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_song_count"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                tools:text="12"
                android:textColor="@color/whiteTextInfo"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_access_time_white_24"
                android:layout_width="24dp"
                android:layout_height="24dp" />
            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:text="@string/label_creation_date"
                android:textColor="@color/whiteTextInfo"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text_creation_date"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                tools:text="12-09-2019"
                android:textColor="@color/whiteTextInfo"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </GridLayout>
    </LinearLayout>


</RelativeLayout>